platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Get whether read-only mode is active
/// @return 1=read-only, 0=editable
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_is_read_only(int editor_handle);

/// Set auto indent mode
/// @param mode 0=NONE(no auto indent),1=KEEP_INDENT(keep previous line indent)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_auto_indent_mode(
  int editor_handle,
  int mode,
  ffi.Pointer<ffi.Size> out_size,
);

/// Get current auto indent mode
/// @return 0=NONE, 1=KEEP_INDENT
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_get_auto_indent_mode(int editor_handle);

/// Set backspace unindent behavior
/// @param enabled 1=enabled, 0=disabled
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_backspace_unindent(
  int editor_handle,
  int enabled,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set whether Tab inserts spaces up to the next tab stop instead of a literal '\t'
/// @param enabled 1=insert spaces, 0=insert '\t'
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_insert_spaces(
  int editor_handle,
  int enabled,
  ffi.Pointer<ffi.Size> out_size,
);

/// Scroll to specified line
/// @param line Line number(0-based)
/// @param behavior Scroll behavior(0=GOTO_TOP, 1=GOTO_CENTER, 2=GOTO_BOTTOM)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Uint8,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_scroll_to_line(
  int editor_handle,
  int line,
  int behavior,
  ffi.Pointer<ffi.Size> out_size,
);

/// Go to specified line and column (scroll + cursor positioning)
/// @param line Line number(0-based)
/// @param column Column number (0-based)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_goto_position(
  int editor_handle,
  int line,
  int column,
  ffi.Pointer<ffi.Size> out_size,
);

/// Adjust scroll offset just enough to keep current cursor visible in viewport
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_ensure_cursor_visible(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Manually set scroll position (automatically clamped to valid range)
/// @param scroll_x Horizontal scroll offset
/// @param scroll_y Vertical scroll offset
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Float,
    ffi.Float,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_scroll(
  int editor_handle,
  double scroll_x,
  double scroll_y,
  ffi.Pointer<ffi.Size> out_size,
);

/// ScrollMetrics binary return layout (payload uses native byte order; all supported platforms are currently LE):
/// 1. f32 scale
/// 2. f32 scroll_x
/// 3. f32 scroll_y
/// 4. f32 max_scroll_x
/// 5. f32 max_scroll_y
/// 6. f32 content_width
/// 7. f32 content_height
/// 8. f32 viewport_width
/// 9. f32 viewport_height
/// 10. f32 text_area_x
/// 11. f32 text_area_width
/// 12. i32 can_scroll_x
/// 13. i32 can_scroll_y
///
/// Get scrollbar metrics
/// @return ScrollMetrics binary payload; Returns default payload for invalid handle
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_get_scroll_metrics(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Get screen coordinate rect for any text position (for floating panel positioning)
/// @param line Line number(0-based)
/// @param column Column number (0-based)
/// @param out_x Output: x coordinate in viewport
/// @param out_y Output: y coordinate in viewport (line top)
/// @param out_height Output: line height
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>(assetId: _sweeteditorAssetId)
external void editor_get_position_rect(
  int editor_handle,
  int line,
  int column,
  ffi.Pointer<ffi.Float> out_x,
  ffi.Pointer<ffi.Float> out_y,
  ffi.Pointer<ffi.Float> out_height,
);

/// Get screen coordinate rect at current cursor position (shortcut)
/// @param out_x Output: x coordinate in viewport
/// @param out_y Output: y coordinate in viewport (line top)
/// @param out_height Output: line height
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>(assetId: _sweeteditorAssetId)
external void editor_get_cursor_rect(
  int editor_handle,
  ffi.Pointer<ffi.Float> out_x,
  ffi.Pointer<ffi.Float> out_y,
  ffi.Pointer<ffi.Float> out_height,
);

/// Register text style (color + background color + font style)
/// @param style_id Style ID
/// @param color Foreground color value (ARGB)
/// @param background_color Background color value (ARGB), 0 means transparent
/// @param font_style Font style (FontStyle enum value)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_register_text_style(
  int editor_handle,
  int style_id,
  int color,
  int background_color,
  int font_style,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set style ranges for specified line and layer (compact binary)
/// @param data payload(LE):
/// u32 line, u32 layer, u32 span_count, then repeat for span_count groups
/// [u32 column, u32 length, u32 style_id]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_spans(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set highlight spans for multiple lines (compact binary)
/// @param data payload(LE):
/// u32 layer, u32 entry_count,
/// [u32 line, u32 span_count, [u32 column, u32 length, u32 style_id] x span_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_spans(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch register highlight text styles (compact binary)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 style_id, i32 color, i32 background_color, i32 font_style] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_register_batch_text_styles(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all style ranges for specified line and layer
/// @param line Line number(0-based)
/// @param layer Highlight layer (0=SYNTAX, 1=SEMANTIC)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Uint8,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_clear_line_spans(
  int editor_handle,
  int line,
  int layer,
  ffi.Pointer<ffi.Size> out_size,
);

/// Clear all highlight spans in specified layer
/// @param layer Highlight layer (0=SYNTAX, 1=SEMANTIC)
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Uint8, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_clear_highlights_layer(
  int editor_handle,
  int layer,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set inlay hints for specified line (compact binary, replace whole line)
/// @param data payload(LE):
/// u32 line, u32 hint_count, then repeat for hint_count groups:
/// [u32 type(0=TEXT,1=ICON,2=COLOR), u32 column, i32 int_value(icon_id/color/0),
/// u32 text_len, u8[text_len] text_utf8]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_inlay_hints(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set inlay hints for multiple lines (compact binary, variable length)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 hint_count,
/// [u32 type, u32 column, i32 int_value, u32 text_len, u8[text_len] text_utf8] x hint_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_inlay_hints(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Add one inlay hint (append to specified line, do not replace existing hints)
/// Set phantom texts for specified line (compact binary, replace whole line)
/// @param data payload(LE):
/// u32 line, u32 phantom_count, then repeat for phantom_count groups:
/// [u32 column, u32 text_len, u8[text_len] text_utf8]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_phantom_texts(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Batch set phantom texts for multiple lines (compact binary, variable length)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 phantom_count,
/// [u32 column, u32 text_len, u8[text_len] text_utf8] x phantom_count] x entry_count
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_batch_line_phantom_texts(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set gutter icons for specified line (compact binary, replace whole line)
/// @param data payload(LE):
/// u32 line, u32 icon_count, then repeat for icon_count groups
/// [i32 icon_id]
/// @param size payload byte length
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_set_line_gutter_icons(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Size> out_size,
);
